# Stargazer

./: .gitignore  Cargo.toml  README.md  build.sh  install-service.sh  latest.json  main.rs  package-lock.json  package.json  stargazer-theme.ts  svelte.config.js  tailwind.config.ts
old-src/assets/polotno_project_files/: stargazer_black_vert_transparent.json
old-src/src/: lib.rs
old-src/src/gui/: gui.rs  pipe_client.rs  styles.rs
old-src/src/gui/views/: dashboard.rs
old-src/src/liberror/: orion_api_err.rs
old-src/src/server/: cache_controller.rs  orion_api.rs  server.rs
src/: app.html  app.postcss  lib.rs  login_page.rs  main.rs  orion_api.rs  styles.rs  success_page.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns  polotno.json  stargazer-icon-polotno.json
src-tauri/src/: lib.rs
src-tauri/src/gui/: gui.rs  pipe_client.rs
src-tauri/src/liberror/: cache_controller_err.rs  mod.rs  orion_api_err.rs
src-tauri/src/libinstance/: instance.rs
src-tauri/src/libpipe/: consts.rs  reqres.rs
src-tauri/src/libschedule/: jobs.rs
src-tauri/src/server/: cache_controller.rs  credential_manager.rs  instance_manager.rs  logger.rs  orion_api.rs  query_job_cache_controller.rs  query_scheduler.rs  query_tracker.rs  server.rs
src/daemon/: install_daemon.rs  interactive.rs  logging_config.yaml  main.rs  reqres.rs  uninstall_daemon.rs
src/gui/: gui.rs  main.rs  orion_api.rs  pipe_client.rs
src/gui/views/: login_page.rs  mod.rs  success_page.rs
src/gui/views/components/: gold_button.rs
src/lib/: logProcessor.ts  stores.ts  types.ts
src/lib/components/: Loader.svelte  NavEntry.svelte  QueryList.svelte  ServerStatus.svelte
src/liberror/: cache_controller_err.rs  mod.rs  orion_api_err.rs
src/libpipe/: consts.rs  mod.rs  reqres.rs
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/dashboard/: +error.svelte  +layout.svelte  +page.svelte
src/routes/dashboard/[...path]/: +page.server.ts
src/routes/dashboard/home/: +page.svelte
src/routes/dashboard/queries/: +page.svelte
src/routes/dashboard/settings/: +page.svelte
src/server/: cache_controller.rs  db_controller.rs  json_types.rs  orion_api.rs  server.rs
src/views/: mod.rs  success_page.rs
src/views/components/: error_components.rs  mod.rs
