[package]
name = "stargazer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stargazer-gui"
path = "src/gui/main.rs"

[[bin]]
name = "stargazer-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "install-daemon"
path = "src/daemon/install_daemon.rs"

[[bin]]
name = "uninstall-daemon"
path = "src/daemon/uninstall_daemon.rs"

[dependencies]
futures = "0.3.29"
iced = {version = "0.10.0", features = ["image", "tokio"] }
named_pipe = "0.4.1"
reqwest = {version = "0.11.22", features = ["json"]}
secstr = "0.5.1"
serde = {version = "1.0.190", features = ["serde_derive"]}
serde_json = "1.0.108"
tokio = {version = "1", features = ["full"]}
windows-service = "0.6.0"
windows-sys = "0.48.0"


