[package]
name = "stargazer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gui"
path = "src/gui/gui.rs"

[[bin]]
name = "stargazer-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "server"
path = "src/server/server.rs"

[[bin]]
name = "install-daemon"
path = "src/daemon/install_daemon.rs"

[[bin]]
name = "uninstall-daemon"
path = "src/daemon/uninstall_daemon.rs"

[dependencies]
futures = "0.3.29"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
iced = {version = "0.10.0", features = ["image", "tokio"] }
interprocess = {version = "1.2.1", features = ["tokio_support"]}
log = "0.4.20"
log4rs = "1.2.0"
named_pipe = "0.4.1"
reqwest = {version = "0.11.22", features = ["json"]}
secstr = "0.5.1"
serde = {version = "1.0.190", features = ["serde_derive"]}
serde_json = "1.0.108"
tokio = {version = "1", features = ["full"]}
windows-service = "0.6.0"
windows-sys = "0.48.0"
actix-web = "4.4.0"
actix-cors = "0.6.4"
thiserror = "1.0.50"
anyhow = "1.0.75"
sha2 = "0.10.8"
r2d2_sqlite = "0.23.0"
r2d2 = "0.8.10"
rusqlite = {version = "0.30.0", features = ["bundled"]}



